--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Макет А.А. Онищенко</title>
     <link rel="stylesheet" href="css/Styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+<style>
+    ul.text_footer li{
+        display: inline;
+        list-style-type: none;
+    }
+    ab:before{
+        content: " | ";
+        color: white;
+    }
+</style>
 <header class="header">
     <img class="image" src="img/logo.png" />
     <p class="text_norm">Фамилия И.О.</p>
@@ -22,8 +32,13 @@
     </div>
 </body>
 <footer class="footer">
-    <p class="text_footer">Главная|Курсы|О нас|Контакты</p>
+    <ul class="text_footer" >
+        <li><a href="">Главная</a></li>
+        <li><a href=""><ab>Курсы</ab></a></li>
+        <li><a href=""><ab>О нас</ab></a></li>
+        <li><a href=""><ab>Контакты</ab></a></li>
+    </ul>
     <p class="text_footer">© 2021, Институт космических и информационных технологий СФУ</p>
 </footer>
-<script> console.log("App loaded")</script>
+<script src="js/app.js"></script>
 </html>
